--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<p>{{title}}</p>
+<app-ui>
+
+  <app-header class="header">header</app-header>
+  <app-nav class="nav">nav</app-nav>
+  <app-icon-close class="icon-close"></app-icon-close>
+  <app-icon-nav class="icon-nav"></app-icon-nav>
+  <app-footer class="footer">footer</app-footer>
+
+</app-ui>
