RouterModule et simple route config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <app-icon-close class="icon-close"></app-icon-close>
   <app-icon-nav class="icon-nav"></app-icon-nav>
   <app-footer class="footer">footer</app-footer>
+  <router-outlet class="pages"></router-outlet>
 
 </app-ui>
 
