--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -21,7 +21,7 @@
   </aside>
   <div class="page">
     <div class="contents">
-      pages dynamic contents
+      <ng-content select=".pages"></ng-content>
     </div>
     <footer>
       <ng-content select=".footer"></ng-content>
