service http observable enums models

--- a/src/app/text/components/text/text.component.scss
+++ b/src/app/text/components/text/text.component.scss
@@ -18,19 +18,19 @@ app-text {
     color: $dark-color;
   }
 }
-// .color-light {
-//   h1,
-//   h2,
-//   h3,
-//   p,
-//   span,
-//   i,
-//   li,
-//   a,
-//   button {
-//     color: $light-color;
-//   }
-// }
+.color-light {
+  h1,
+  h2,
+  h3,
+  p,
+  span,
+  i,
+  li,
+  a,
+  button {
+    color: $light-color;
+  }
+}
 // .color-one {
 //   h1,
 //   h2,
