--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,9 +1,10 @@
 <app-template-one-col>
   <app-text class="title" [colorLight]="true">
     <h1>Orders</h1>
+    <!-- <p>{{ collection | json }}</p> -->
   </app-text>
   <div class="content">
-    <app-table-light *ngIf="collection" [headers]="listHeaders" [collection]="collection"></app-table-light>
+    <app-table-light *ngIf="collection$ | async as collection" [headers]="listHeaders" [collection]="collection"></app-table-light>
     <app-button route="add" label="Add an order"></app-button>
   </div>
 </app-template-one-col>
