--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -4,7 +4,17 @@
     <!-- <p>{{ collection | json }}</p> -->
   </app-text>
   <div class="content">
-    <app-table-light *ngIf="collection$ | async as collection" [headers]="listHeaders" [collection]="collection"></app-table-light>
+    <app-table-light *ngIf="collection$ | async as collection" [headers]="listHeaders">
+      <tr *ngFor="let item of collection">
+        <td>{{ item.typePresta }}</td>
+        <td>{{ item.client }}</td>
+        <td>{{ item.nbJours }}</td>
+        <td>{{ item.tjmHt | currency: 'EUR' }}</td>
+        <td>{{ item | total  | currency: 'EUR' }}</td>
+        <td>{{ item | total: 'ttc' | currency: 'EUR' }}</td>
+        <td>{{ item.state }}</td>
+      </tr>
+    </app-table-light>
     <app-button route="add" label="Add an order"></app-button>
   </div>
 </app-template-one-col>
