--- a/src/app/clients/pages/page-list-clients/page-list-clients.component.html
+++ b/src/app/clients/pages/page-list-clients/page-list-clients.component.html
@@ -1,1 +1,25 @@
-<p>page-list-clients works!</p>
+<app-template-one-col>
+  <app-text class="title" [colorLight]="true">
+    <h1>Clients</h1>
+    <!-- <p>{{ collection | json }}</p> -->
+  </app-text>
+  <div class="content">
+ <!--  <app-table-light *ngIf="collection$ | async as collection" [headers]="listHeaders"> -->
+  <app-table-dark *ngIf="collection$ | async as collection" [headers]="listHeaders">
+      <tr *ngFor="let item of collection">
+        <td>{{ item.name }}</td>
+        <td>{{ item.tva }}</td>
+        <td>{{ item.ca }}</td>
+        <td>{{ item | ca | currency: 'EUR' }}</td>
+        <td [appState]="item.state">
+          <select (change)="changeState(item, $event)">
+            <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
+
+          </select>
+        </td>
+      </tr>
+   </app-table-dark>
+  <!--   </app-table-light> -->
+    <app-button route="add" label="Add an client"></app-button>
+  </div>
+</app-template-one-col>
