add client form

--- a/src/app/clients/pages/page-add-client/page-add-client.component.html
+++ b/src/app/clients/pages/page-add-client/page-add-client.component.html
@@ -3,7 +3,7 @@
     <h1>Add an Orders</h1>
   </app-text>
   <div class="contentLeft">
-    <app-form-order [initItem]="init" (submited)="add($event)"></app-form-order>
+    <app-form-client [initItem]="init" (submited)="add($event)"></app-form-client>
   </div>
   <div class="contentRight">
     elements de la colonne right
