--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -7,6 +7,7 @@
    <app-table-light *ngIf="collection$ | async as collection" [headers]="listHeaders">
  <!-- <app-table-dark *ngIf="collection$ | async as collection" [headers]="listHeaders"> -->
       <tr *ngFor="let item of collection">
+        <td><app-icon-edit (click)="edit(item)"></app-icon-edit></td>
         <td>{{ item.typePresta }}</td>
         <td>{{ item.client }}</td>
         <td>{{ item.nbJours }}</td>
